fix:  text overflow on cta buttons (#35378)

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -1,6 +1,5 @@
 .btn-cta-big {
   max-height: 100%;
-  height: 70px;
   font-size: 40px;
   white-space: normal;
 }
